# Parallel-computing

实验1/: exp1_1.mlx  exp1_2.mlx  exp1_4.mlx  并行计算-实验报告1.docx
实验1/参考资料/: 并行第一次实验课--课堂练习.pptx
实验2/: exp2_1.mlx  exp2_2.mlx  exp2_2_true.mlx  exp2_3.mlx  exp2_4.mlx  并行计算-实验报告2.doc
实验3/: CMakeLists.txt  exp2.cpp  exp2.f  integration of cos x from negative 1 to 1.cpp  并行计算-实验报告3.doc
实验4/: Parallel Monte Carlo Operation (Blocking).cpp  Parallel Monte Carlo Operation (Non-blocking).cpp  Parallel Monte Carlo Operation Reduced Version.cpp  Serial Monte Carlo Operation Version.cpp  非阻塞通信与组通信归约操作学习材料.docx
实验5/: 并行计算-实验报告5.doc
实验5/有限元FEM学习材料/: 1-源代码--FEM计算二维传热问题.doc  4-一个学生写的二维传热问题的有限元求解.docx
实验5/有限差分FDM学习材料/: 有限差分FDM--声波方程源代码.doc
论文写作/: 第三次实验要求.txt  计算机专业相关的高质量论文.xlsx
论文写作/西科大本科论文/: 西南科技大学本科---参考文献（2020年修订）.docx
论文写作/西科大硕博士论文/: （新）西南科技大学研究生学位论文撰写规范20170517.docx  （新）论文封面等内容的要求、样式.docx
